--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- Bootstrap core CSS -->
     <link href="Bootstrap_dist/css/bootstrap2.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="starter-template.css" rel="stylesheet">
+    <!-- Custom styles for this template 
+    <link href="starter-template.css" rel="stylesheet">-->
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
