--- a/Tabelle.html
+++ b/Tabelle.html
@@ -143,14 +143,14 @@ thead tr {
 </table>
 
 
-<p><a href="http://validator.w3.org/check?uri=http%3A%2F%2Fabschlusstestapp.cloudcontrolled.com%2F&amp;profile=xhtml1.0"><img
+<p><a href="http://validator.w3.org/check?uri=http%3A%2F%2Fabschlusstestapp.cloudcontrolled.com/Tabelle%2F&amp;profile=xhtml1.0"><img
       src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
     
 
 </p>
 
 <p>
-    <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fabschlusstestapp.cloudcontrolled.com%2F&amp;profile=css2">
+    <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fabschlusstestapp.cloudcontrolled.com/Tabelle%2F&amp;profile=css2">
         <img src="http://www.w3.org/Icons/valid-css2-blue" alt="css-test"/>
     </a>
 </p>
