--- a/Suchformular.html
+++ b/Suchformular.html
@@ -94,7 +94,7 @@ label {
 </form>
 
 
-<a href="http://wave.webaim.org/report#/http://abschlusstestapp.cloudcontrolled.com/"
+<a href="http://wave.webaim.org/report#/http://abschlusstestapp.cloudcontrolled.com/Suchformular.html"
       title="Explanation of WCAG 2.0 Level Triple-A Conformance">
   <img height="32" width="88" 
           src="http://www.w3.org/WAI/wcag2AAA"
